[package]
name = "mick-jaeger"
version = "0.1.5"
license = "Apache-2.0"
description = "Rust client for sending traces to a Jaeger server"
repository = "https://github.com/tomaka/mick-jaeger"
documentation = "https://docs.rs/mick-jaeger"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.7"
rand = "0.7.3"
thrift = "0.13.0"

[dev-dependencies]
async-std = "1.7.0"
