[package]
name = "mick-jaeger"
version = "0.1.7"
license = "Apache-2.0"
description = "Rust client for sending traces to a Jaeger server"
repository = "https://github.com/tomaka/mick-jaeger"
documentation = "https://docs.rs/mick-jaeger"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.7"
rand = "0.8.4"
thrift = "0.15.0"

[dev-dependencies]
async-std = "1.10.0"
